fixed align issue of logos

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,6 +158,14 @@ h1, h2, h3, h4, h5, h6 {
   max-height: 40px;
 }
 
+.leftNavpart{
+  display: flex;
+  align-items: center;
+}
+.leftNavpart a{
+  margin-left: 6px !important;
+}
+
 /*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
